# vacancyBD

./: .gitignore  README.md  db_manager.py  main.py  pyproject.toml  vacancy.py
src/: db_manager.py  hhapi_client.py  unyts.py  vacancy.py
